--- a/other/index.html
+++ b/other/index.html
@@ -3,7 +3,8 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>Flip text</title>
+    <title>נודר אתה צריך להפוך את זה</title>
+    <link rel="icon" href="background.gif">
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
