--- a/other/index.html
+++ b/other/index.html
@@ -4,7 +4,12 @@
 <head>
     <meta charset="utf-8" />
     <title>נודר אתה צריך להפוך את זה</title>
-    <link rel="icon" href="background.gif">
+    <link rel="icon" href="background.gif" />
+    <meta property="og:title" content="אם תרצה לרוץ לכאן או לרוץ לרמת גן אני רוסי, אני רוסי..." />
+    <meta property="og:type" content="Tool" />
+    <meta property="og:url" content="https://pa0neix.github.io/" />
+    <meta property="og:image" content="https://pa0neix.github.io/other/thumbnail.jpg" />
+    <meta property="og:description" content="דא סוקה אידי נחוי" />
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
