--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title></title>
+<title>pnx - GitHub</title>
 <style>
 body {
   background: #f1f1f1;
@@ -19,6 +19,7 @@ body {
   border-radius: 17px;
   box-shadow: 0 2px 5px #00000045;
   display: block;
+  animation: inTo 1s ease forwards;
 }
 .header {
   font-family: Myriad Pro;
@@ -29,6 +30,10 @@ body {
   font-family: monospace;
   text-align: center;
   font-size: 12px;
+}
+@keyframes inTo {
+  from { top: 150% }
+  to { top: 10px }
 }
 </style>
 </head>
